Commit made from VS Code Azure Static Web Apps

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,60 +5,65 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="astro-cube">
   <main>
     <article class="region prose wrapper hero">
-      <h1>astro-cube</h1>
+      <h1>Thank you</h1>
 
       <h2>
-        a tiny <a href="https://astro.build/">Astro</a> starter template, with <a
-          href="https://cube.fyi/">CUBE CSS</a
-        >
+        The Partner Success Engagement App (PSEA) pilot program <em>has ended</em>, effective December 29th, 2023.
       </h2>
     </article>
 
     <article class="region prose wrapper">
       <ul role="list" class="grid features">
         <li class="flow">
-          <h3>minimal</h3>
+          <h3>Thanks</h3>
           <p>
-            Barebones, <em>just Astro</em> and <em>pure CSS</em>, no other
-            external tools, extra build step or client-side JavaScript.
+            Thank you for your participation in the pilot program for the <em>Partner Success Engagement App (PSEA)</em> available at https://aka.ms/partnerhelp. This pilot ended on December 29th, 2023.
           </p>
         </li>
 
         <li class="flow">
-          <h3>customizable</h3>
+          <h3>You're heard</h3>
           <p>
-            Everything here is just suggestive, remove, add, tweak, copy/paste,
-            <em>knock yourself out</em>.
+            Your <em>valuable feedback</em> and improvements you'd like to see in an app have been recorded and we're developing a roadmap for the evolution of PSEA.
+             We will reach out when we're ready to share more. For now, we kindly request that you discontinue the use of PSEA and reach out directly by e-mail.
           </p>
         </li>
 
         <li class="flow">
-          <h3>robust</h3>
+          <h3>Reach us</h3>
           <p>
-            Based on <a href="https://buildexcellentwebsit.es/"
-              >buildexcellentwebsit.es</a
-            > philosophy: let the browser do the heavy lifting rather than "micromanage"
-            it, as <a href="https://andy-bell.co.uk/">the author</a> puts it.
+            Please use the appropriate e-mail address below to reach us:
           </p>
+          <ul>
+            <li>
+              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+            </li>
+            <li>
+              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+            </li>
+            <li>
+              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+            </li>
+            </ul>
         </li>
 
         <li class="flow">
-          <h3>fluid</h3>
+          <h3>Partner Center</h3>
           <p>
-            Spacings and font sizes are <a href="https://utopia.fyi/"
-              ><code>clamp()</code> based</a
-            >, they adapt to the viewport's size instead of arbitrary
-            breakpoints — looks good on <em>all devices</em>.
+            Visit <a href="https://partner.microsoft.com/"
+              >Partner Center</a
+            > to find the latest news, resources, and support for Microsoft partners.
           </p>
         </li>
       </ul>
     </article>
-
     <footer class="region prose wrapper">
-      See <a href="https://github.com/williamhzo/astro-cube">source code</a>,
-      contributions are welcome! <span role="img" aria-label="waving hand emoji"
-        >👋</span
-      >
+      <div class="footergrid">
+                    <div class="column"><a title="Contact us" href="https://support.microsoft.com/en-us/contactus">Contact us</a></div>
+                    <div class="column"><a title="Privacy and cookies" href="http://go.microsoft.com/fwlink/?LinkId=521839">Privacy and cookies</a></div>
+                    <div class="column"><a title="Terms of use" href="http://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default.aspx">Terms of use</a></div>
+                    <div class="column"><a title="Trademarks" href="https://www.microsoft.com/trademarks">Trademarks</a></div>
+        </div>
     </footer>
   </main>
 </Layout>
