--- a/src/styles/composition/composition.css
+++ b/src/styles/composition/composition.css
@@ -9,11 +9,37 @@
   gap: var(--gutter, var(--space-2xl));
 }
 
+.footergrid {
+  --grid-min-item-size: 10ch;
+
+  display: grid;
+  gap: var(--gutter, var(--space-2xl));
+  align-items: center; /* Add this line */
+}
+
+.column {
+  font-size: 10pt;
+}
+
+.column a {
+  text-decoration: none;
+}
+
+
 @supports (width: min(var(--grid-min-item-size), 100%)) {
   .grid {
     grid-template-columns: repeat(
       var(--grid-placement, auto-fit),
       minmax(min(var(--grid-min-item-size, 20ch), 100%), 1fr)
+    );
+  }
+}
+
+@supports (width: min(var(--grid-min-item-size), 100%)) {
+  .footergrid {
+    grid-template-columns: repeat(
+      var(--grid-placement, auto-fit),
+      minmax(min(var(--grid-min-item-size, 10ch), 100%), 1fr)
     );
   }
 }
