Update search related metadata

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,49 +6,51 @@ import Layout from '../layouts/Layout.astro';
   <main>
     <article class="region prose wrapper hero">
       <h1>Thank you</h1>
-
-      <h2>
+      <h3>
         The Partner Success Engagement App (PSEA) pilot program <em>has ended</em>, effective December 29th, 2023.
-      </h2>
+      </h3>
     </article>
 
     <article class="region prose wrapper">
       <ul role="list" class="grid features">
         <li class="flow">
-          <h3>Thanks</h3>
+          <h4>Thank You</h4>
           <p>
-            Thank you for your participation in the pilot program for the <em>Partner Success Engagement App (PSEA)</em> available at https://aka.ms/partnerhelp. This pilot ended on December 29th, 2023.
+            Thank you for your participation in the pilot program for the <em>Partner Success Engagement App (PSEA)</em> which was available at https://aka.ms/partnerhelp. This pilot ended on December 29th, 2023. E-mail communications were sent to key stakeholders.
           </p>
         </li>
 
         <li class="flow">
-          <h3>You're heard</h3>
+          <h4>Your Feedback</h4>
           <p>
-            Your <em>valuable feedback</em> and improvements you'd like to see in an app have been recorded and we're developing a roadmap for the evolution of PSEA.
-             We will reach out when we're ready to share more. For now, we kindly request that you discontinue the use of PSEA and reach out directly by e-mail.
+            We used your <em>valuable feedback</em> and improvements you'd like to see in an app to create a backlog and we're developing a roadmap for the evolution of PSEA.
+             We will reach out when we're ready to share more. For now, we kindly request that you <em>discontinue the use of PSEA</em> and reach out directly by e-mail.
           </p>
         </li>
 
         <li class="flow">
-          <h3>Reach us</h3>
+          <h4>Reach us</h4>
           <p>
-            Please use the appropriate e-mail address below to reach us:
+            Please use the appropriate e-mail address for your organization below to reach us directly:
           </p>
           <ul>
             <li>
-              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture & Avanade</a>
             </li>
             <li>
-              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+              <a href="mailto:capcsatech@microsoft.com">Capgemini & Sogeti</a>
             </li>
             <li>
-              <a href="mailto:acnpartnersuccess@microsoft.com">Accenture</a>
+              <a href="mailto:psoeycsa@microsoft.com">EY</a>
+            </li>
+            <li>
+              <a href="mailto:hcl-csas@microsoft.com">HCL</a>
             </li>
             </ul>
         </li>
 
         <li class="flow">
-          <h3>Partner Center</h3>
+          <h4>Other Resources</h4>
           <p>
             Visit <a href="https://partner.microsoft.com/"
               >Partner Center</a
