--- a/src/layouts/SEO.astro
+++ b/src/layouts/SEO.astro
@@ -1,19 +1,19 @@
 ---
-const title = 'astro-cube | minimal starter';
-const description = 'A minimal Astro starter template, with CUBE CSS';
+const title = 'Partner Success Engagement App';
+const description = 'Former site of the Partner Success Engagement App, a tool for Microsoft partners to request help on engagements.';
 const ogImage = 'https://astro-cube.vercel.app/images/og-image.png';
 ---
 
-<meta name="og:site_name" property="og:site_name" content="astro-cube" />
+<meta name="og:site_name" property="og:site_name" content="PSEA" />
 <meta name="og:type" property="og:type" content="website" />
 <meta
   property="og:description"
-  content="A minimal Astro starter template, with CUBE CSS"
+  content="Former site of the Partner Success Engagement App"
 />
 <meta property="og:title" content={title} />
 <meta property="og:image" content={ogImage} />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="williamhzo" />
+<meta name="twitter:site" content="wahidsaleemi" />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:description" content={description} />
 <meta name="twitter:image" content={ogImage} />
