Incorporate Karl changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="astro-cube">
   <main>
     <article class="region prose wrapper hero">
-      <h1>Thank you</h1>
+      <img alt="" src="../public/images/closed.jpg" style="height:270px; width:478px" />
       <h3>
         The Partner Success Engagement App (PSEA) pilot program <em>has ended</em>, effective December 29th, 2023.
       </h3>
@@ -64,7 +64,7 @@ import Layout from '../layouts/Layout.astro';
                     <div class="column"><a title="Contact us" href="https://support.microsoft.com/en-us/contactus">Contact us</a></div>
                     <div class="column"><a title="Privacy and cookies" href="http://go.microsoft.com/fwlink/?LinkId=521839">Privacy and cookies</a></div>
                     <div class="column"><a title="Terms of use" href="http://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default.aspx">Terms of use</a></div>
-                    <div class="column"><a title="Trademarks" href="https://www.microsoft.com/trademarks">Trademarks</a></div>
+                    <div class="column"><a title="Data Protection Notice" href="http://go.microsoft.com/fwlink/?LinkId=518021">Data Protection Notice</a></div>
         </div>
     </footer>
   </main>
