update page image

--- a/src/layouts/SEO.astro
+++ b/src/layouts/SEO.astro
@@ -1,7 +1,7 @@
 ---
 const title = 'Partner Success Engagement App';
 const description = 'Former site of the Partner Success Engagement App, a tool for Microsoft partners to request help on engagements.';
-const ogImage = 'https://astro-cube.vercel.app/images/og-image.png';
+const ogImage = '/images/closed.png';
 ---
 
 <meta name="og:site_name" property="og:site_name" content="PSEA" />
