--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="astro-cube">
+<Layout title="dev">
   <main>
     <article class="region prose wrapper hero">
-      <img alt="" src="../public/images/closed.jpg" style="height:270px; width:478px" />
+      <img alt="" src="/images/closed.jpg" style="height:270px; width:478px" />
       <h3>
         The Partner Success Engagement App (PSEA) pilot program <em>has ended</em>, effective December 29th, 2023.
       </h3>
