Update image and bg color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="dev">
+<Layout title="PSEA Pilot">
   <main>
     <article class="region prose wrapper hero">
       <img alt="" src="/images/closed.jpg" style="height:270px; width:478px" />
